# fastapi-launcher

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
openspec/: project.md
openspec/changes/add-advanced-launcher-features/: ISSUES.md  design.md  proposal.md  tasks.md
openspec/changes/add-advanced-launcher-features/specs/cli/: spec.md
openspec/changes/add-advanced-launcher-features/specs/config/: spec.md
openspec/changes/add-advanced-launcher-features/specs/launcher/: spec.md
openspec/changes/add-advanced-launcher-features/specs/monitor/: spec.md
openspec/changes/add-advanced-launcher-features/specs/process/: spec.md
openspec/changes/add-fastapi-launcher/: design.md  proposal.md  tasks.md
openspec/changes/add-fastapi-launcher/specs/cli/: spec.md
openspec/changes/add-fastapi-launcher/specs/config/: spec.md
openspec/changes/add-fastapi-launcher/specs/daemon/: spec.md
openspec/changes/add-fastapi-launcher/specs/health/: spec.md
openspec/changes/add-fastapi-launcher/specs/launcher/: spec.md
openspec/changes/add-fastapi-launcher/specs/logs/: spec.md
openspec/changes/add-fastapi-launcher/specs/process/: spec.md
openspec/changes/add-fastapi-launcher/specs/ui/: spec.md
src/fastapi_launcher/: __init__.py  accessLog.py  checker.py  cli.py  config.py  daemon.py  discover.py  health.py  init.py  launcher.py  logs.py  monitor.py  port.py  process.py  smartMode.py  ui.py
src/fastapi_launcher/enums/: __init__.py  logFormatEnum.py  modeEnum.py
src/fastapi_launcher/schemas/: __init__.py  configSchema.py  logSchema.py
tests/: conftest.py  test_accessLog.py  test_checker.py  test_cli.py  test_config.py  test_daemon.py  test_discover.py  test_enums.py  test_health.py  test_init.py  test_integration.py  test_launcher.py  test_logs.py  test_monitor.py  test_port.py  test_process.py  test_schemas.py  test_smartMode.py  test_ui.py
