[project]
name = "fastapi-launcher"
version = "0.2.0"
description = "A universal CLI launcher for FastAPI applications with daemon mode, logging, and rich UI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "FastAPI Launcher Team" }
]
keywords = ["fastapi", "uvicorn", "cli", "launcher", "daemon", "process-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "fastapi>=0.110.0",
]
gunicorn = [
    "gunicorn>=22.0.0",
]
monitor = [
    "textual>=0.50.0",
]
all = [
    "fastapi-launcher[gunicorn,monitor]",
]

[project.scripts]
fa = "fastapi_launcher.cli:app"
fastapi-launcher = "fastapi_launcher.cli:app"

[project.urls]
Homepage = "https://github.com/fastapi-launcher/fastapi-launcher"
Documentation = "https://github.com/fastapi-launcher/fastapi-launcher#readme"
Repository = "https://github.com/fastapi-launcher/fastapi-launcher"
Issues = "https://github.com/fastapi-launcher/fastapi-launcher/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_launcher"]

[tool.hatch.build.targets.sdist]
include = ["src/fastapi_launcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--cov=fastapi_launcher",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=83",
]

[tool.coverage.run]
source = ["src/fastapi_launcher"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if not isUnix",
    "os\\.fork\\(",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
